data/derived/comb/progs/unify/prog3751.ml.out
Characters 140-142:
  let tens = (x1 + x2 + h) / 10 in
                   ^^
Error: This expression has type 'a list
       but an expression was expected of type int
